--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ a:hover {
 
 @media only screen and (max-width: 600px) {
   .blur-background {
-    background: url('https://unsplash.com/photos/black-computer-keyboard-on-black-surface-u-n1AFjUclo');
+    background: url('https://www.pinterest.com/pin/469359592418577317/');
     background-size: cover;
     filter: blur(1px);
     position: fixed;
