--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ a:hover {
     background: url('https://w0.peakpx.com/wallpaper/757/974/HD-wallpaper-dark-bongo-cat-meme-black-cat-dark-car-dark-black-dark-bongo-bongo-cat.jpg');
     background-size: cover;
     filter: blur(0px);
-    position: fixed;
+    overflow: auto;
     width: 100%;
     height: 100%;
     background-position: 70% 0;
